# arbitrage_site

./: BETFAIR_DIAGNOSTIC_REPORT.md  CONSOLE_LOGS_GUIDE.md  Dockerfile  analise.html  app.py  config.toml  create_user.py  credentials.json  debug_betfair.txt  generate_test_data.py  how to run services.txt  modules__init__.py  nginx.txt  nginx_flask.conf  pyproject.toml  requirements.txt  reset_database.py  test_betfair_aggregate.py  test_betfair_direct_login.py  test_betfair_integration.py  test_betfair_login.py  test_betfair_mapper.py  test_betfair_raw_marketbook.py  test_scraping.py  tmp_inspect_api.py  tmp_test_betfair.py  valide_session.py  verify_frontend_data.py
assets/css/: black-dashboard.css  black-dashboard.css.map  custom-styles.css  style.css
backups/: scrap.py
certs/: client-2048.crt  client-2048.key  kalshi.key
instance/: database.db  db.py
instance/test_data/: test_app.db
modules/: __init__.py  config.py  models.py  routes.py  run_scrap_on_vps.py  run_scrap_on_vps.service  scrap.py  telegram_mt_green.py  telegram_utils.py  util.py
modules/authentication/: __init__.py  decorators.py  routes.py
modules/socketio_custom/: __init__.py  routes.py
modules/views/: __init__.py  routes.py
playwright_profile/: Local State
playwright_profile/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Top Sites  TransportSecurity  Web Data
static/: calculator.js  script.js  styles.css
templates/: 2.html  calculadora.html  index.html
tests/: test_app.py
(+317 files in other folders)
